try with more stable GC